Оформляет добавление цвета без стилизации футера

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,17 @@
     <!--Шапка сайта-->
     <header>
         <nav>
-            <a href="/">WebStudio</a>
-            <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </header>
@@ -30,61 +30,61 @@
     <main>
         <section>
             <!--Подразумевается заголовок h1 Проекты-->
-            <ul>
+            <ul class="list">
                 <li><h2>Все</h2></li>
                 <li><h2>Веб-сайты</h2></li>
                 <li><h2>Приложения</h2></li>
                 <li><h2>Дизайн</h2></li>
                 <li><h2>Маркетинг</h2></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/portfolio/website-1.jpg" alt="Ноутбук с открытой страницой сайта с карточками сотрудников" width="370">
-                    <h3>Технохряк</h3>
+                    <h3 class="title">Технохряк</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/design-1.jpg" alt="Двое мужчин, играющих в баскетбол за разные команды, борятся за мяч"
                         width="370">
-                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <h3 class="title">Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/application-1.jpg" alt="Полупрозрачная рыба на фоне надписи"
                         width="370">
-                    <h3>Ресторан Seafood</h3>
+                    <h3 class="title">Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/marketing-1.jpg" alt="Большие наушники" width="370">
-                    <h3>Проект Prime</h3>
+                    <h3 class="title">Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/application-2.jpg" alt="Две коробки - большая и маленькая" width="370">
-                    <h3>Проект Boxes</h3>
+                    <h3 class="title">Проект Boxes</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/website-2.jpg" alt="Компьютер с открытой страницой сайта с изображением карты" width="370">
-                    <h3>Inspiration has no Borders</h3>
+                    <h3 class="title">Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/design-2.jpg" alt="Открытая книга с изображениями женщин надписью ограниченный выпуск"
                         width="370">
-                    <h3>Издание Limited Edition</h3>
+                    <h3 class="title">Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/marketing-2.jpg" alt="Бирка з надписью Lab el tag в PSD макете"
                         width="370">
-                    <h3>Проект LAB</h3>
+                    <h3 class="title">Проект LAB</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/application-3.jpg" alt="Мужские руки нажимают на кнопки клавиатуры в нотбуке, в котором открыта страница с изображением мужчины с телефоном" width="370">
-                    <h3>Growing Business</h3>
+                    <h3 class="title">Growing Business</h3>
                     <p>Приложение</p>
                 </li>
             </ul>
@@ -92,13 +92,13 @@
     </main>
 
     <!--Футер-->
-    <footer>
-        <a href="/">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
+    <footer class="footer">
+        <a href="/" class="logo"><span class="part-logo">Web</span><span class="part-logo-footer">Studio</span></a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <address>
-            <ul>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="conts list">
+                <li><a href="mailto:info@example.com" class="cont">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="cont">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
